--- a/css/ITS.css
+++ b/css/ITS.css
@@ -443,6 +443,7 @@ img.ITS_question_img {
   padding: 0;
   margin: 0.5em 1em;
   max-height: 250px;
+  max-width: 650px;
   text-align:right;
   vertical-align: middle;
   z-index: 3;
