--- a/css/admin.css
+++ b/css/admin.css
@@ -9,6 +9,7 @@ a.silver {border:1px solid #999}
 a.file{position:relative;background-color:#ff9;border:1px solid #ccc;padding:5px}
 a.ITS_EDIT{float:left;margin-left:.5em;font-family:"Times New Roman", Times, Monospace;font-size:10pt;padding:.25em}
 textarea.ITS_EDIT{font-family:verdana,monospace;position:relative;min-width:80%;border:none;border-bottom:2px solid silver;background-color:#FFF;padding:.5em}
+td.ITS_EDIT{position:relative;width:1%}
 ul.ITS_EDIT{position:relative;display:block}
 ul.ITS_EDIT li{background-color:#fff;color:blue;font-size:12pt;font-family:monospace;text-decoration:none;padding:.2em 1em}
 div.ITS_ADMIN{position:relative;font-family:verdana,monospace;font-weight:700;background-color:#FFF;border:2px solid #EEE;overflow:auto;padding:.5em .1em}
@@ -26,11 +27,11 @@ FIELDSET{background:#fff;border:2px solid #666;padding:.5em}
 div.ITS_MESSAGE{font-family:monospace;text-align:left;margin:.5em;padding:.5em 1em}
 #navcontainer ul{padding-left:0;margin-left:0;background-color:#fff;color:#666;float:left;width:100%;font-family:arial, helvetica, sans-serif}
 #navcontainer ul li{display:inline}
-#navcontainer ul li a{background-color:#fff;color:#666;font-size:12pt;font-family:Garamond, Georgia, serif;text-decoration:none;float:left;border-right:2px solid #666;padding:.2em 1em}
+#navcontainer ul li a{background-color:#fff;color:#666;font-size:18pt;font-family:Garamond, Georgia, serif;text-decoration:none;float:left;border-right:2px solid #666;padding:.2em 1em}
 #navcontainer ul li a:hover{background-color:#666;color:#fff}
 #navEdit{border:#FFF}
 #navlistEdit{border:1px solid #FFF;margin:0;padding:0}
-#navlistEdit li{list-style:none;margin-left:.25em;text-align:center;border:1px solid #FFF;padding:5px}
+#navlistEdit li{list-style:none;text-align:center;border:1px solid #FFF;padding:3px;}
 li.ITS_addTAG{font-size:8pt;color:#666}
 li.ITS_addTAG:hover{background-color:#FFC;cursor:pointer}
 #navlistEdit li:hover{border:1px solid #666}
