--- a/css/ITS_search.css
+++ b/css/ITS_search.css
@@ -9,7 +9,7 @@ TABLE.ITS_search th{background:#fff;color:#666;padding:.5em}
 TABLE.ITS_search tr{border:2px solid #FFF;border-bottom:2px solid #999;padding:.25em}
 TABLE.ITS_search td{color:#000;padding:.25em}
 TABLE.ITS_search tr:hover,TABLE.ITS_search tr:hover div{background:#ff9}
-div.ITS_search {clear:both;position:relative;margin:5% 0 0;border:2px solid #fff;margin:1em}
+div.ITS_search {clear:both;position:relative;margin:5% 0 0;border:2px solid #fff;margin:1em;overflow:auto}
 hr.ITS_search  {clear:both;position:relative;border:1px solid #ddd;margin:1em}
 .ITS_tag_add {color:#098;}
 span.keywords {float:right;color:#666;padding:0.25em}
