--- a/css/ITS_concepts.css
+++ b/css/ITS_concepts.css
@@ -14,6 +14,8 @@
 li.ITS_nav_concept {margin:0;padding:0;font-size:5pt}
 li.ITS_nav_concept a{border:2px solid #fff;margin:0;font-size:10pt}
 
+.resource_concept {width:95%;text-align:left;font-size:120%;padding:0.2em;font-family: Geneva, Tahoma, Verdana, sans-serif;color:#00a}
+
 span.CHOICE {
 	 clear:both;
 	 float: left;
