--- a/css/ITS_resource.css
+++ b/css/ITS_resource.css
@@ -10,5 +10,6 @@ div.ITS_latex {border: 1px solid #999; padding:0.5em;overflow:auto;}
 div.fl { float:left; margin:0 0.3em;padding:0;border: 1px solid #fff;}
 table.tt {border-collapse:collapse;margin:0.2em;}
 #resourceList {position:relative;width:100%;border-bottom:2px solid #aaa;margin-top:0.5em;overflow:auto;}
-TABLE.ITS_resource{position:relative;width:100%;border:1px solid #aaa;vertical-align:middle;border-collapse:collapse;background:#fff;font-size:8pt;table-layout:fixed;margin:0 2%}
+table.ITS_resource{position:relative;width:100%;vertical-align:middle;border-collapse:collapse;background:#fff;font-size:8pt;}
+table.ITS_resource td {border:none}
 img.ITS_resource_img {max-height: 250px;max-width: 200px;}
