--- a/css/ITS.css
+++ b/css/ITS.css
@@ -2,7 +2,10 @@
 Author(s): Greg Krudysz
 W3C CSS Validator results for ITS.css (CSS level 2.1)
 ======================================================*/
-
+body { margin: 0 2%;
+	padding: 0;/*height: 100%;*/
+	font: 120% arial, sans-serif; text-align: center;color: black;background: #fff;
+}
 .ITS_error { background: #ff9;color: red;font-weight:bold;border:2px solid #000; }
 #slider { z-index: 2; }
 /*
@@ -37,10 +40,6 @@ h3 {font-size: 1.40em;}
 h4 {font-size: 1.30em;}
 h5 {font-size: 1.26em;}
 h6 {font-size: 1.20em;} /* Defined default Header sizes */
-body { margin: 0 2%;
-	padding: 0;/*height: 100%;*/
-	font: 100% arial, sans-serif; text-align: center;color: black;background: #fff;
-}
 input:-moz-focus-inner {border: 0;}
 div.ITS_ghost { 
   position: relative;
@@ -51,8 +50,8 @@ div.ITS_ghost {
 div.ITS_MESSAGE {
   color: green;
   padding: 2em 0;
-	text-align: center;
-	font: bold 18px Georgia, sans-serif;
+  text-align: center;
+  font: bold 18px Georgia, sans-serif;
 	width: 100%;
 	min-height: 100px;
   vertical-align: middle;
@@ -65,17 +64,18 @@ div.ITS_MESSAGE ul {
   font-size: 120%;
   height: 100%;
 }
-#modeContainer {position:relative;margin:5px 0 0 0;padding:3px;width:100%;height:50px;}
+#modeContainer {position:relative;margin:5px 0 0 0;padding:3px;width:100%;height:5px;}
 #modeSelContainer {float:left;margin:0;padding:0;width:20%;height:3em;background-color:#fff;}
-#modeContentContainer {float:right;margin:0 1em 0 0;padding:1em 0;background-color:#fff;width:70%;overflow: auto;}
+#modeContentContainer {float:right;margin:0 1em 0 0;padding:0.5em 0;background-color:#fff;width:70%;overflow: auto;}
 
-#nav1 {padding:0;margin:-5px;border:1px solid #fff;}
+#nav1 {padding:0.5em;margin:-5px;border:1px solid #fff;}
 #nav1 ul {float:left;padding:0;margin:0;list-style:none;background-color:#eee;}
 #nav1 a {display: block; width: 10em; height: 120%;font:120% Georgia;font-weight:bold;}
 #nav1 li {float:left;width: 10em;border:none;z-index:1}
 #nav1 li ul {position: absolute;width: 10em;left: -999em;}
 #nav1 li:hover ul {left: auto;}
 
+/*.ITS_nav { overflow:auto;}*/
 .ITS_nav ul{list-style-type:none;text-align:center;margin-top:-10px;margin-bottom:23px;position:relative;z-index:3;padding:0}
 .ITS_nav li{display:inline;text-align:center;font-size:8pt;margin:0 3px}
 .ITS_nav li a{color:#666;background-color:#FFF;border:2px solid #ddd;text-decoration:none;outline:0;padding:1px 10px}
