--- a/css/ITS_concepts.css
+++ b/css/ITS_concepts.css
@@ -7,17 +7,17 @@
 .conceptTable {position:relative;width:100%;border:2px solid #999;border-collapse:collapse}
 .conceptTable td {position:relative;border:1px solid #FFF}
 .conceptTable td.choice_del {border:1px solid #999;background-color:#aaa}
-.selcon{display:inline;float:left;font:100% Georgia, serif;text-align:center;margin:0.5em;color:#000;border:2px solid #eee;padding:0.2em}
+.selcon{display:inline;float:left;font:110% Georgia, serif;text-align:center;margin:0.5em;color:#000;border:2px solid #eee;padding:0.2em}
 .selcon:hover{border:2px solid #000;color:#000;cursor:pointer}
 .concept_alph {color:pink;border:1px solid pink;}
 .concept_alph:hover{border:2px solid red;color:#090;cursor:pointer}
-#errorConceptContainer{color:#f00;padding:0.5em;}
+#errorConceptContainer{color:#f00;padding:0;}
 li.ITS_nav_concept {margin:0;padding:0;font-size:5pt}
 li.ITS_nav_concept a{border:2px solid #fff;margin:0;font-size:10pt}
 
 .resource_concept {float:left;clear:both;text-align:left;font-size:120%;padding:0.2em;font-family: Geneva, Tahoma, Verdana, sans-serif;color:#00a}
 .ITS_resource_box { border:2px solid #999;margin:0;padding:0.15em;overflow:auto;}
-
+.conceptLIST {overflow:auto;padding:0;margin:0;border-top:3px ridge #999}
 span.CHOICE {
 	 clear:both;
 	 float: left;
@@ -49,7 +49,6 @@ font-weight:bold;
 line-height:0px;
 text-align:center;
 background:#eee}
-
 /*================= DEBUG =================/
 #conceptContainer{border:3px solid brown;}
 #conceptContainer{background-color:pink}
