--- a/css/ITS_score.css
+++ b/css/ITS_score.css
@@ -4,8 +4,8 @@
 #scoreContainerContent{position:relative;width:90%;text-align:center;display:none;background:#fff;margin:0;padding:1em}
 SPAN.gray{color:gray}
 SPAN.grade{color:#00c;font-size:120%;font-weight:bold}
-SPAN.ITS_computeScores{color:#000;font-weight:700;overflow:auto;padding:1em}
-SPAN.ITS_computeScores_Total{color:#000;font-weight:700}
+SPAN.ITS_score{color:#000;font-weight:700;overflow:auto;padding:1em}
+SPAN.ITS_score_Total{color:#000;font-weight:700}
 SPAN.ITS_smallFont{position:relative;font-size:80%;font-weight:700}
 TABLE.ITS_mySCORE{position:relative;width:100%;vertical-align:middle;margin-left:-10px;border-collapse:collapse;text-align:center;font-family:aerial,sans serif;font-size:80%;border-style:none}
 TD.ITS_mySCORE{font-size:8pt;border:1px solid silver;background:#fff;padding:.15em}
