--- a/css/ITS.css
+++ b/css/ITS.css
@@ -64,9 +64,6 @@ div.ITS_MESSAGE ul {
   font-size: 120%;
   height: 100%;
 }
-#modeContainer {position:relative;margin:5px 0 0 0;padding:3px;width:100%;height:5px;}
-#modeSelContainer {float:left;margin:0;padding:0;width:20%;height:3em;background-color:#fff;}
-#modeContentContainer {float:right;margin:0 1em 0 0;padding:0.5em 0;background-color:#fff;width:70%;overflow: auto;}
 
 #nav1 {padding:0.5em;margin:-5px;border:1px solid #fff;}
 #nav1 ul {float:left;padding:0;margin:0;list-style:none;background-color:#eee;}
@@ -1458,8 +1455,8 @@ div.ITS_ANSWER          {	background: #fff;      }
 div.navContainer        {   background: #fff;  
                             border: 1px solid #fff;}
 div.navContent 			{   border: 1px solid #fff;}
-/*#footerContainer        {	background: #fff;     }*/
-div.logout              {	background: #fff;      }/**/
+/*#footerContainer        {	background: #fff;     }/**/
+div.logout              {	background: #fff;      }
 
 /*================= DEBUG =================/
 #pageContainer        {	background: pink;      }
@@ -1467,8 +1464,8 @@ div.logout              {	background: #fff;      }/**/
 #messageContainer     {	background: purple;    }
 #scoreContainer       {	background: gray;      }
 
-#modeContainer		  {	background: blue;      }
-#modeSelContainer	  {	background: lightblue;  }
+#modeContainer		  {	background: black;      }
+#modeSelContainer	  {	background: lightblue; }
 #modeContentContainer {	background: #00a;      }
 
 #ITS_QUESTION 		  { background: brown;	   }
@@ -1483,7 +1480,7 @@ div.navContent 		  { border: 1px solid red; }
 
 TD.ITS_QUESTION 	  { background: #eef;      }
 #logout               {	background: red;       }
-#frameContainer		  {	background: magenta;   }/**/
+#frameContainer		  {	background: magenta;   }
 
 /* QUESTION + ANSWER /
 #ITS_QUESTION 				{ border: 3px solid blue; }
