--- a/css/admin.css
+++ b/css/admin.css
@@ -16,7 +16,7 @@ div.ITS_ADMIN{position:relative;font-family:verdana,monospace;font-weight:700;ba
 div.ITS_ADMIN:hover{border:2px solid #999;background-color:#FFA}
 a.ITS_ADMIN{position:relative;width:100%;font-family:verdana,monospace;font-size:60%;font-weight:700;text-decoration:none;letter-spacing:.1em;background-color:#FFF;border:2px solid #EEE;z-index:2;padding:.5em .1em}
 a.ITS_ADMIN:hover{background-color:#FFA;text-decoration:underline;color:#666;border:2px solid #666}
-TABLE.ITS_ADMIN{border:2px solid #FFF;border-collapse:collapse;margin:.5em;padding:0}
+TABLE.ITS_ADMIN{border:2px solid #F99;border-collapse:collapse;margin:.5em;padding:0;float:right;border:1px solid red}
 TABLE.ITS_ADMIN TH{background:red;border:2px solid #006400;color:#000;padding:.25em}
 TABLE.ITS_ADMIN TD{border:2px solid #FFF;color:#000;padding:.25em}
 .ITS_button{border:2px solid #666;color:#000;background:#ffa;font-family:monospace;margin:.5em;padding:.25em .5em}
