--- a/css/ITS.css
+++ b/css/ITS.css
@@ -1325,11 +1325,11 @@ div.logout:active {
 SELECT.ITS_select {
   border: 2px solid #aaa;
   background: #FFF;
-  width: 100px;
-	padding: 0;
-	color: #666;
-	text-align: center;
-	outline: 0;
+  /*width: 300px;*/
+  padding: 0;
+  color: #666;
+  text-align: center;
+  outline: 0;
 }
 span.instr {
  position: relative;
@@ -1471,7 +1471,7 @@ div.logout              {	background: #fff;      }
 #ITS_QUESTION 		  { background: brown;	   }
 div.ITS_QUESTION 	  { background: orange;    }
 div.ITS_question_text {	background: yellow;    }
-#contentContainer     {	background: blue;   border: 1px solid red;   }
+#contentContainer     {	background: blue;   border: 4px solid red;   }
 
 #ITS_ANSWER           {	background: darkgreen; }
 div.ITS_ANSWER        {	background: khaki; }
