--- a/css/admin.css
+++ b/css/admin.css
@@ -5,6 +5,7 @@ table.ITS_backtrace{background-color:#FFF;border:2px solid #999;border-collapse:
 table.ITS_backtrace td{border:2px solid #999;text-align:left;padding:.25em}
 div.file{clear:both;float:left;background-color:#FFF;border:1px solid #FFF;vertical-align:middle;padding:1em;}
 div.file a img{border:none;outline:0}
+div.file2{clear:both;float:left;background-color:#FFF;border:1px solid #ccc;text-align:left;padding:0;}
 a.silver {border:1px solid #999}
 a.file{position:relative;background-color:#ff9;border:1px solid #ccc;padding:5px}
 a.ITS_EDIT{float:left;margin-left:.5em;font-family:"Times New Roman", Times, Monospace;font-size:10pt;padding:.25em}
