--- a/css/ITS_mode.css
+++ b/css/ITS_mode.css
@@ -1,4 +1,4 @@
-#navModeContainer { 
+#navModeContainer {
   position: relative;
   top: 20px;
   left: 0;
@@ -46,14 +46,10 @@ a#current {
   /*border-right: 1px solid #fff;*/
 /*  }*/
 #modeContentContainer {
-  position: absolute;
-  top: 0px;
-  left: 176px;
+  position: relative;
   margin: 0;
   padding: 0;
   height: auto;
-  /*min-height: 70px;*/
-  /*width: 500px;*/
   background-color: #fff;
   border: 1px solid #fff;
 }
@@ -116,7 +112,7 @@ a#current {
 /*#modeContainer {position:relative;margin:5px 0 0 0;padding:3px;width:100%;height:5px;}*/
 #modeSelContainer {float:left;margin:0;padding:0;width:20%;height:3em;background-color:#fff;}
 /*#modeContentContainer {float:right;margin:0 1em 0 0;padding:0.5em 0;background-color:#fff;width:70%;overflow: auto;}*/
-#modeContainer {  clear: both;
+#modeXXContainer {  clear: both;
   position: relative;
 	background-color: #fff;
 	width: 100%; /* important */
