--- a/css/ITS.css
+++ b/css/ITS.css
@@ -79,11 +79,13 @@ div.ITS_MESSAGE ul {
 #nav1 li:hover ul {left: auto;}
 
 /* Navigation Index */
-ul.nav {list-style-type:none;text-align:center;margin-top:-15px;margin-bottom:23px;position:relative;z-index:2;padding:0;font-family: Arial,Liberation Sans,DejaVu Sans,sans-serif;}
+ul.nav {list-style-type:none;text-align:center;position:relative;z-index:2;padding:0;font-family: Arial,Liberation Sans,DejaVu Sans,sans-serif;}
 ul.nav li{display:inline;text-align:center;font-size:8pt;margin:0 3px}
 ul.nav li a{color:#666;background-color:#FFF;border:2px solid #ddd;text-decoration:none;outline:0;padding:1px 10px}
 ul.nav li a:hover{color:#000;border:2px solid #666}
 ul.nav li a#current{color:#666;font-weight:700;font-size:medium;border:2px solid #666;background-color:#FFF}
+
+hr.chapter { border:1px solid #ddd;margin:-1.5em 2em 0 2em}
 
 /*font-weight:700;font-size:medium;*/
 table.choice {border:1px solid #999;border-collapse:collapse}
