--- a/css/ITS_index4.css
+++ b/css/ITS_index4.css
@@ -1,4 +1,4 @@
-#navContainer{ border: 1px solid #FFFFFF; }
+#navContainer{ border: 1px solid #FFFFFF; padding: 1.5em 0 0 0; }
 #navListQC{
   padding: 3px 0;
   margin-left: 0;
