--- a/css/ITS_concepts.css
+++ b/css/ITS_concepts.css
@@ -49,7 +49,6 @@ line-height:0px;
 text-align:center;
 background:#eee
 }
-
 #conceptColumnContainer { width:100%;text-align: center;}
 .conceptColumn { float: center;display: inline-block;vertical-align:text-top }
 .conceptList { border:1px solid #fff;padding:0;margin:0.5em 1em; text-align:left;list-style-type:none; }
@@ -59,8 +58,60 @@ background:#eee
 .conceptCount {float:right;color:#bbb;font-family: Arial,Liberation Sans,DejaVu Sans,sans-serif;margin-left:2em }
 hr.concept { border:1px solid #ddd;margin:0.5em 2em }
 div.navConcept {float:left;font: 110% georgia, times, "times new roman", serif;text-align: left;color: blue;} 
-span.navConceptInfo {float:right;border:1px solid #99f; } 
+span.navConceptInfo {float:right;border:1px solid #fff; font: Courier, monospace; } 
 
+#navcontainer2
+{
+position: relative;
+margin: 0 3em 1em 3em;
+padding: 0;
+background: #fff;
+border-bottom: 1px solid #bbb;
+height:28px;
+}
+#navlist2 {
+list-style-type: none;
+text-align: center;
+position: relative;
+z-index: 2;
+padding: 0;
+height:29px;
+}
+#navlist2 li
+{
+display: inline;
+text-align: center;
+font-size: 90%;
+margin: 0 0.25em;
+padding: 0;
+/*font: 90% Verdana, sans-serif;*/
+}
+#navlist2 li a, #navlist2 li a:link
+{
+background: #fff;
+color: #777;
+text-decoration: none;
+padding: 3px 5px 3px 5px;
+outline:0;
+}
+#navlist2 li a:hover
+{
+color: #000;
+border-bottom: 3px solid #bbb;
+cursor: pointer;
+}
+#navlist2 li a#current, #navlist2 li a#current:link
+{
+color: #000;
+cursor: default;
+font-weight: bold;
+border-bottom: 3px solid #999;
+outline:0;
+}
+#navlist2 li a#current:hover
+{
+border-bottom: 3px solid #000;
+}
 
 /*================= DEBUG =================/
 #conceptContainer{border:3px solid brown;}
