--- a/css/ITS_mode.css
+++ b/css/ITS_mode.css
@@ -40,7 +40,7 @@
 #modeContentContainer {
   position: relative;
   margin: 0;
-  padding-bottom: 1em;
+  padding-bottom: 5px;
   height: auto;
   background-color: #fff;
   border: 0px solid #fff;
