--- a/css/ITS_concepts.css
+++ b/css/ITS_concepts.css
@@ -8,7 +8,9 @@
 .conceptTable td {position:relative;border:1px solid #FFF}
 .conceptTable td.choice_del {border:1px solid #999;background-color:#aaa}
 .selcon{font:110% Georgia, serif;text-align:left;color:#000;}
-.selcon:hover{color:#000;cursor:pointer;border:2px solid #000;} /**/
+.selcon:hover{color:#000;cursor:pointer;border:2px solid #000;}
+.unselcon{font:110% Georgia, serif;text-align:left;color:#000;}
+.unselcon:hover{color:#000;cursor:pointer;border:2px solid #000;}
 .concept_alph {color:pink;border:1px solid pink;}
 .concept_alph:hover{border:2px solid red;color:#090;cursor:pointer}
 #errorConceptContainer{color:#f00;padding:0;}
@@ -28,25 +30,24 @@ span.CHOICE {
 	 background: #fff;
 	 white-space: nowrap;
 	 border-radius:5px;
--moz-border-radius:5px;
--webkit-border-radius:5px;
--khtml-border-radius:5px;
+	-moz-border-radius:5px;
+	-webkit-border-radius:5px;
+	-khtml-border-radius:5px;
 	 overflow: auto;
 }
 span.chighlight { color:blue}
 #conceptColumnContainer { width:100%;text-align: center;}
-.conceptColumn { float: center;display: inline-block;vertical-align:text-top }
-.conceptList { border:1px solid #fff;padding:0;margin:0.5em 1em; text-align:left;list-style-type:none; }
+.conceptColumn { float: center;display: inline-block;vertical-align:text-top;}
+.conceptList { border:1px solid #fff;padding:0;margin:0.5em 1em; text-align:left;list-style-type:none;padding:0 25%}
 .conceptList li {color:#666;border:1px solid #fff;padding: 0.5}
 .conceptList li:hover{border:1px dotted #ccc;color:#090;cursor:pointer}
 .conceptScore { float:right;color:#999;font-size:60% }
-.conceptCount {float:right;color:#bbb;margin-left:0.5em;color:#555;width:2em;text-align:right;border:1px solid #fff;font-family: Verdana,Arial,Helvetica,sans-serif;font-size:11pt}
+.conceptCount {float:right;color:#bbb;margin-left:0.75em;color:#555;width:3em;text-align:right;border:1px solid #fff;font-family: Verdana,Arial,Helvetica,sans-serif;font-size:11pt}
 hr.concept { border:1px solid #ddd;margin:0.5em 2em }
 div.navConcept {float:left;font: 110% georgia, times, "times new roman", serif;text-align: left;color: blue;} 
 span.navConceptInfo {float:right;border:1px solid #fff; font: Courier, monospace; } 
 
-#navcontainer2
-{
+#navcontainer2 {
 position: relative;
 margin: 0 3em 1em 3em;
 padding: 0;
@@ -62,8 +63,7 @@ z-index: 2;
 padding: 0;
 height:29px;
 }
-#navlist2 li
-{
+#navlist2 li {
 display: inline;
 text-align: center;
 font-size: 90%;
@@ -71,8 +71,7 @@ margin: 0 0.25em;
 padding: 0;
 /*font: 90% Verdana, sans-serif;*/
 }
-#navlist2 li a, #navlist2 li a:link
-{
+#navlist2 li a, #navlist2 li a:link {
 background: #fff;
 color: #777;
 text-decoration: none;
