--- a/css/ITS.css
+++ b/css/ITS.css
@@ -23,6 +23,7 @@ body { margin: 0 2%;
 .ITS_tag a { text-decoration: none; font-size: 120%; }
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
 /*a { border-radius:7px 7px 7px 7px }*/
+a.wrapper { color:#999;text-decoration:none;outline:0}
 a.ITS:link { color:#999;text-decoration:none;outline:0} 
 a.ITS:visited { color:#666;text-decoration:none;outline:0} 
 a.ITS:hover {color:#666;font-weight:bold} 
