--- a/css/ITS_concepts.css
+++ b/css/ITS_concepts.css
@@ -19,20 +19,18 @@
 .ITS_resource_box { border:2px solid #999;margin:0;padding:0.15em;overflow:auto;}
 .conceptLIST {overflow:auto;padding:0;margin:0;border-top:3px ridge #999;list-style-type:decimal;}
 span.CHOICE {
-	 clear:both;
 	 float: left;
-	 /*position: relative;*/
 	 width: auto;
-     border: 2px solid #999; 
+     border: 2px solid #aaa; 
 	 margin: 0.5em;
 	 padding: 0.25em 1em;
 	 display: inline;
-	 background: #fff;
+	 background: #ffd;
 	 white-space: nowrap;
-	 border-radius:5px;
-	-moz-border-radius:5px;
-	-webkit-border-radius:5px;
-	-khtml-border-radius:5px;
+	 border-radius:10px;
+	-moz-border-radius:10px;
+	-webkit-border-radius:10px;
+	-khtml-border-radius:10px;
 	 overflow: auto;
 }
 span.chighlight { color:blue}
@@ -44,7 +42,7 @@ span.chighlight { color:blue}
 .conceptScore { float:right;color:#999;font-size:60% }
 .conceptCount {float:right;color:#bbb;margin-left:0.75em;color:#555;width:3em;text-align:right;border:1px solid #fff;font-family: Verdana,Arial,Helvetica,sans-serif;font-size:11pt}
 hr.concept { border:1px solid #ddd;margin:0.5em 2em }
-div.navConcept {float:left;font: 110% georgia, times, "times new roman", serif;text-align: left;color: blue;} 
+div.navConcept {float:left;font: 200 20px/1.5 Helvetica,Verdana,sans-serif;text-align:left;color: #666;} 
 span.navConceptInfo {float:right;border:1px solid #fff; font: Courier, monospace; } 
 
 #navcontainer2 {
